--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Basic ReactJS</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 </head>
 <body>
+  <div id="app">Loading...</div>
   <script src="./app/bundle.js"></script>
 </body>
 </html>
